fix alignment of advanced spectrums for mobile

--- a/src/less/pick-a-color.less
+++ b/src/less/pick-a-color.less
@@ -669,7 +669,7 @@
       width:@advanced-color-box-width;
       @media screen and (max-width: 979px) {
         width:@advanced-color-box-width-phone;
-        left:5px;
+        left:10px;
       }
     }
 
